--- a/src/components/ha-push-notifications-toggle.html
+++ b/src/components/ha-push-notifications-toggle.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
 
+<link rel='import' href='../util/hass-mixins.html'>
+
 <dom-module id='ha-push-notifications-toggle'>
   <template>
     <paper-toggle-button
@@ -13,7 +15,7 @@
 </dom-module>
 
 <script>
-class HaPushNotificationsToggle extends Polymer.Element {
+class HaPushNotificationsToggle extends window.hassMixins.EventsMixin(Polymer.Element) {
   static get is() { return 'ha-push-notifications-toggle'; }
 
   static get properties() {
