--- a/src/components/buttons/ha-call-service-button.html
+++ b/src/components/buttons/ha-call-service-button.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="./ha-progress-button.html">
 
-<link rel='import' href='../util/hass-mixins.html'>
+<link rel='import' href='../../util/hass-mixins.html'>
 
 <dom-module id='ha-call-service-button'>
   <template>
